# apprtc-win

./: CMakeLists.txt  README.md  prepareWinBuild.bat
apprtc-win/: CallClient.cpp  CallClient.h  JsonUtils.cpp  JsonUtils.h  MyGlView.cpp  MyGlView.h  WssSignalingChannel.cpp  WssSignalingChannel.h  apprtcwin.cpp  apprtcwin.h  apprtcwin.qrc  apprtcwin.ui  main.cpp
third/webrtc/include/: webrtcApi.h
third/webrtc/lib/: peerconnection_client_shared.dll.lib
